<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="title_label">TITLE</string>
    <string name="title_hint">Enter a title for the crime</string>
    <string name="details_label">DETAILS</string>
    <string name="solved_label">Solved</string>
    <string name="list_item_crime_title">Crime Title</string>
    <string name="list_item_crime_date">Crime Date</string>
    <string name="first_crime_btn_txt">First Crime</string>
    <string name="last_crime_btn_txt">Last crime</string>
    <string name="date_picker_title">Date of crime</string>
    <string name="dialog_date_ok">OK</string>

    <string name="new_crime">New crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="delete_crime">Delete crime</string>

    <string name="empty_text">Please create new crime</string>
    <string name="add_crime_btn">Add Crime</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>

    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>

    <string name="crime_report">
        %1$s! The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_suspect_text">Call suspect: </string>
</resources>
